cc_library(
    name = "gfxstream-magma-server",
    srcs = [
        "Decoder.cpp",
        "magma_dec/magma_dec.cpp",
        "magma_dec/magma_server_context.cpp",
    ] + glob(["**/*.h"]),
    includes = ["magma_dec"],
    visibility = ["//visibility:public"],
    deps = [
        "//hardware/google/gfxstream/host:gfxstream_host_headers",
        "//hardware/google/gfxstream/host/apigen-codec-common",
        "//hardware/google/gfxstream/third-party/fuchsia/magma:magma-headers",
    ],
)

cc_library(
    name = "magma-headers",
    hdrs = glob(["*.h"]),
    visibility = ["//visibility:public"],
)
